@@ -8,3 +8,4 @@ Post-1.2
 - i/e: support for <metadata>
 - e: file format like AbiWord 1.1.2
 - e: fix bug when font name has an &
+- e: table (just the structure, no colspan, no rowspan)
